added trigger and timer speed to the past work state

--- a/src/styles.css
+++ b/src/styles.css
@@ -128,11 +128,30 @@ h3 {
 /*NAV STYLE*/
 .nav {
   position: fixed;
-  bottom:0;
-  width: 100%;
-  padding: 20px 20% 15px 20%;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  padding: 20px 3% 15px 3%;
   color: white;
   background: black;
+}
+
+.navPanel {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border: 1px solid yellow;
+  width: 160px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.navPanel > a {
+  border: 1px solid red;
+}
+.navPanel > .homebutton {
+  background-color: lightblue;
 }
 
 @keyframes home-logo-spin {
@@ -188,4 +207,21 @@ h3 {
 }
 
 /*flex stuff*/
+
+/*trigger background assets*/
+.backgroundPosition {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  opacity:.5;
+}
+
+.backgroundPosition > img {
+  display: block;
+}
 
