--- a/src/styles.css
+++ b/src/styles.css
@@ -53,11 +53,11 @@ h3 {
 }
 .column2 {
   display: inline-block;
-  width: 30%;
+  width: 20%;
   min-width: 2px;
   font-size: 11px;
   vertical-align: top;
-  /*background: chartreuse;*/
+ /* background: chartreuse;*/
   text-align: center;
 }
 .contact-items {
@@ -68,13 +68,12 @@ h3 {
   display: inline-block;
 }
 .contact-item > div:nth-of-type(1) {
-  width: 80px;
-  color: grey;
+  width: 75px;
 }
 
 /* HOME PAGE BIO */
 .introsection {
-  padding: 80px 20% 100px 20%;
+  padding: 100px 20% 100px 20%;
 }
 .hello {
   /*display: inline-block;*/
@@ -199,9 +198,10 @@ h3 {
   left: 0;
   padding: 15px 3% 15px 3%;
   background: black;
-  font-family: 'Palanquin';
+  color: white;
   max-height: 80px;
   transition: max-height .3s;
+  z-index: 999;
 }
 /* <... className='nav open' ...> */
 /* "dot notation" is different on stylesheets than in javascript,
@@ -217,15 +217,18 @@ here it means "select the element that has BOTH these class names" */
   color: grey;
   margin: -5px 0px -8px 0px;
   font-size: 16px;
+  font-family:'Overpass Mono', monospace;
   /*border: 1px solid white;*/
 }
 .nav > p {
+  font-family:'Overpass Mono', monospace;
   font-weight: 100; 
   color: grey;
   max-width: 60%;
   font-size: 12px;
   line-height: 14px;
   margin: 12px 0px 0px 0px;
+  line-height: 1.3;
   
 }
 
@@ -240,13 +243,18 @@ here it means "select the element that has BOTH these class names" */
   justify-content: center;
   align-items: center;
 }
-.navPanel > a {
+.navPanel a {
   color: white;
   text-decoration: none;
   padding: 0px 12px;
 }
 .homebutton {
+  padding-right: 1px !important;
+  margin-top: -8px;
   font-size: 15px;
+  font-family:'Overpass Mono', monospace;
+  font-weight: 200;
+  letter-spacing: .3em;
 }
 
 .nextbutton {
@@ -255,6 +263,13 @@ here it means "select the element that has BOTH these class names" */
   margin-top: -7px;
   display: flex;
 } 
+
+.previousbutton{
+  font-size: 28px;
+  font-weight: light;
+  margin-top: -7px;
+  display: flex;
+}
 
 @keyframes home-logo-spin {
   from { transform: rotate(0deg); }
@@ -339,7 +354,7 @@ here it means "select the element that has BOTH these class names" */
 /*MEDIA QUERIES*/
 
 /*tablets*/
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 900px) {
   .gridlogo {
     width: 33.33%;
   }
@@ -352,7 +367,7 @@ here it means "select the element that has BOTH these class names" */
 
   .introsection {
   /*background-color: red;*/
-  padding: 80px 10% 0px 5%;
+  padding: 100px 10% 0px 5%;
   max-width: 750px;
   }
 
@@ -412,10 +427,10 @@ here it means "select the element that has BOTH these class names" */
 
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 500px) {
   
   .introsection {
-    padding: 80px 5% 0px 5%;
+    padding: 100px 5% 0px 5%;
 
   }
 
