--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
+@import url('./animate.css');
 @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One|Khula|Palanquin|Overpass+Mono:300,400,600,700');
-
 
 
 body {
@@ -26,15 +26,33 @@ h3 {
 
 /*HOME PAGE STYLES*/
 
+.home {
+  position: relative;
+}
+.trigger-overlay {
+  /*display: none;*/
+  opacity: 0;
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: opacity .3s;
+  background: rgba(0,0,0,.5);
+}
+.trigger-visible .trigger-overlay {
+  opacity: 1;
+}
+
 .home-logo {
   animation: home-logo-spin infinite 20s linear;
   height: 80px;
 }
-
 .home-header {
+  position: relative;
   white-space: nowrap;
   padding: 50px;
-
 }
 .column1 {
   display: inline-block;
@@ -75,6 +93,29 @@ h3 {
 .introsection {
   padding: 100px 20% 100px 20%;
 }
+
+.Typist {
+  font-size: 33px;
+  font-family: 'Overpass Mono', monospace;
+  font-weight: 700;
+  letter-spacing: -.09em
+
+}
+
+.Typist .Cursor {
+  display: inline-block; }
+  .Typist .Cursor--blinking {
+    opacity: 1;
+    animation: blink .7s linear infinite; }
+
+@keyframes blink {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
 .hello {
   /*display: inline-block;*/
   /*width: 20%;*/
@@ -126,11 +167,12 @@ h3 {
   font-weight: 800;
   /*text-transform: uppercase;*/
   font-family:'Overpass Mono', monospace;
-  letter-spacing: -.03em
+  letter-spacing: -.03em;
 }
 
 .past {
   padding-top: 15px;
+
 }
 .past > h3 {
   font-weight: 300;
@@ -138,8 +180,11 @@ h3 {
   cursor: pointer;
   font-size: 12px;
   text-transform: uppercase;
-  letter-spacing: .09em
+  letter-spacing: .09em;
+  transform: translate(px, 0px)
 }
+
+
 .past > h3:hover {
   color:red;
 }
@@ -155,23 +200,6 @@ h3 {
   filter: invert(100%);
 }
 
-.home.trigger-visible {
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0,0,0, 0.4);
-  transition: all .5s linear;
-}
-
-
-
-.clientpage {
-
-
-}
 
 /*PRESENTATION (WORK)*/
 .displayzone {
@@ -185,7 +213,7 @@ h3 {
 }
 
 .asset video {
-  widgridlogoth: 100%;
+  width: 100%;
   max-width: 100%;
 }
 
@@ -236,7 +264,7 @@ here it means "select the element that has BOTH these class names" */
    font-size: 11px;
    font-family:'Overpass Mono', monospace;
    vertical-align: middle;
-   }
+}
 
 .loginButton:hover {
   background: #F8F8FF;
@@ -248,13 +276,33 @@ here it means "select the element that has BOTH these class names" */
 
 .loginClose {
   position: absolute;
-  top: 30%;
-  right: 20px;
-  cursor: pointer;
+  top: 12px;
+  right: 25px;
+  height: 25px;
+  width: 25px;
 }
+.loginClose .patty {
+  width: 100%;
+  height: 1px;
+  margin: 10px auto;
+  background: white;
+  transition: all 0.1s ease-out;
+}
+
+.loginClose.active .patty:first-of-type {
+  transform: rotate(45deg);
+  transform-origin: top left;
+}
+.loginClose.active .patty:last-of-type {
+  transform: rotate(-45deg);
+  transform-origin: bottom left;
+  margin-top: 16px;
+}
+
 
 .nav > h3 {
   font-weight: 700;
+
   color: grey;
   margin: -5px 0px -8px 0px;
   font-size: 16px;
@@ -285,23 +333,24 @@ here it means "select the element that has BOTH these class names" */
   align-items: center;
 }
 .navPanel a {
-  color: white;
+  color: #aaaaaa;
   text-decoration: none;
   padding: 0px 12px;
 
 }
 .homebutton {
-  padding-right: 1px !important;
+  padding-right: 2px !important;
   margin-top: -2px;
   font-size: 12px;
   font-family:'Overpass Mono', monospace;
   font-weight: 200;
   letter-spacing: .2em;
+  text-transform: uppercase;
 }
 
 .nextbutton {
   font-family:'julius Sans One';
-  font-size: 28px;
+  font-size: 23px;
   font-weight: light;
   margin-top: -2px;
   display: flex;
@@ -309,7 +358,7 @@ here it means "select the element that has BOTH these class names" */
 
 .previousbutton{
   font-family:'julius Sans One';
-  font-size: 28px;
+  font-size: 23px;
   font-weight: 200;
   margin-top: -2px;
   display: flex;
@@ -320,6 +369,7 @@ here it means "select the element that has BOTH these class names" */
   to { transform: rotate(360deg); }
 }
 
+  
 /*Grid logo styling*/
 
 .gridcontainer {
@@ -490,11 +540,9 @@ here it means "select the element that has BOTH these class names" */
     width:10%;
   }
 
-
-
-  
-
 }
+
+
 
 
 
