--- a/src/styles.css
+++ b/src/styles.css
@@ -69,6 +69,10 @@ h3 {
   padding: 0;
   font-family: 'Julius Sans One', sans-serif;
 }
+.column1 > h1 a {
+  text-decoration: none;
+  color: black;
+}
 .column2 {
   display: inline-block;
   width: 20%;
