Add styling to give breathing room on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -476,6 +476,7 @@ here it means "select the element that has BOTH these class names" */
   /*background-color: red;*/
   padding: 100px 10% 0px 5%;
   max-width: 750px;
+  margin-bottom: 2em;
   }
 
 
