--- a/src/styles.css
+++ b/src/styles.css
@@ -266,7 +266,7 @@ h3 {
   bottom: 0;
   right: 0;
   left: 0;
-  padding: 15px 3% 15px 3%;
+  padding: 15px 5%;
   background: black;
   color: white;
   max-height: 80px;
@@ -291,6 +291,7 @@ here it means "select the element that has BOTH these class names" */
   border-bottom: 1px solid #444;
   transition: .1s border ease;
   margin-right: 50px;
+  border-radius: 0;
 }
 .loginBox:focus {
   outline: none;
@@ -453,8 +454,9 @@ here it means "select the element that has BOTH these class names" */
 }
 
 .message {
-  display:in-line block;
-  margin: 10px;
+  font-size: .8em;
+  display: inline-block;
+  margin-left: 25px;
 }
 
 /* <a class='gridlogo nba'... */
@@ -598,70 +600,138 @@ here it means "select the element that has BOTH these class names" */
   
   .introsection {
     padding: 100px 5% 0px 5%;
-
   }
-
   .gridlogo {
     width: 33.33%;
   }
-
   .column1{
     width:30%;
   }
-
   .column2{
     width:10%;
   }
-
   .recent > a {
-  font-size: 20px;
-  display: inline-block;
+    font-size: 20px;
+    display: inline-block;
 
-  padding: 8px 0px;
-  letter-spacing: -.03em;
+    padding: 8px 0px;
+    letter-spacing: -.03em;
+  }
+
+  .column1 {
+    display: inline-block;
+    width: 20%;
+    vertical-align: top;
+    cursor: pointer; 
+    cursor: hand;
+    background: yellow;
+  }
+  .column1 > h1 {
+    font-size: 50px;
+    line-height: 86%;
+    position: absolute;
+    left: 20px;
+    padding: 0;
+    font-family: 'Julius Sans One', sans-serif;
+  }
+  .column1 > h1 a {
+    text-decoration: none;
+    color: black;
+  }
+  .column2 {
+    display: inline-block;
+    width: 20%;
+    min-width: 2px;
+    font-size: 11px;
+    vertical-align: top;
+   /* background: chartreuse;*/
+    text-align: center;
+  }
 }
 
-.column1 {
-  display: inline-block;
-  width: 20%;
-  vertical-align: top;
-  cursor: pointer; 
-  cursor: hand;
-  background: yellow;
-}
-.column1 > h1 {
-  font-size: 50px;
-  line-height: 86%;
-  position: absolute;
-  left: 20px;
-  padding: 0;
-  font-family: 'Julius Sans One', sans-serif;
-}
-.column1 > h1 a {
-  text-decoration: none;
-  color: black;
-}
-.column2 {
-  display: inline-block;
-  width: 20%;
-  min-width: 2px;
-  font-size: 11px;
-  vertical-align: top;
- /* background: chartreuse;*/
-  text-align: center;
-}
-
-}
- @media screen and (max-width: 350px) {
-  
+@media screen and (max-width: 350px) {
   .column1 {
     display: inline-block;
     width: 6%;
     vertical-align: top;
+  }
 }
+
+.darkoverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: black;
+  opacity: .85;
+}
+
+.trigger-mobile {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  background: url('../public/assets/trigger.mobile.l.gif');
+  background-size: cover;
 }
 
 
+@media screen and (max-width: 414px) {
+  .nav {
+    height: 40%;
+    width: 100%;
+    padding: 0;
+    vertical-align: top;
+    text-align: center;
+  }
 
+  .loginBox {
+    margin: 20% auto 0 auto;
+    display: block;
+    width: 75%;
+    font-size: 18px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #444;
+    text-align: center;
+  }
 
+  .loginButton {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+
+  .message {
+    margin-left: 0;
+    display: block;
+  }
+
+  .loginClose {
+    position: absolute;
+    top: 12px;
+    right: 25px;
+    height: 25px;
+    width: 25px;
+  }
+
+  .loginClose .patty {
+    width: 100%;
+    height: 1px;
+    margin: 10px auto;
+    background: white;
+    transition: all 0.1s ease-out;
+  }
+
+  .loginClose.active .patty:first-of-type {
+    transform: rotate(45deg);
+    transform-origin: top left;
+  }
+  .loginClose.active .patty:last-of-type {
+    transform: rotate(-45deg);
+    transform-origin: bottom left;
+    margin-top: 16px;
+  }
+}
 /*mobile*/
